# CGE

./: CDE.pro  CMakeLists.txt  MyGraphicsView.h  MyGraphicsViewHull.h  ProjectInfo.h  README.md  choisealgorithmmenu.cpp  choisealgorithmmenu.h  main.cpp  mainwindow.cpp  mainwindow.h
Engine/Algebra/: LinealAlgebra.cpp  LinealAlgebra.h  Point2D.cpp  Point2D.h
Engine/Algoritms/: BelongingPolygon.cpp  BelongingPolygon.h
Engine/Geometry/Mesh/: CreateMesh.cpp  CreateMesh.h
Engine/Geometry/Polygons/: ConvexPolygon.cpp  ConvexPolygon.h  Polygon.cpp  Polygon.h  RegularPolygon.cpp  RegularPolygon.h  StarPolygon.cpp  StarPolygon.h
Engine/Geometry/Shapes/: ConvexPolygon.h  RegularPolugon.cpp  RegularPolugon.h  Shape.cpp  Shape.h  StarPolygon.h
src/CGE/Algebra/: LinealAlgebra.cpp  LinealAlgebra.h  Point2D.cpp  Point2D.h
src/CGE/Geometry/Hull/: Hull.h  HullAlgorithms.cpp  HullAlgorithms.h
src/CGE/Geometry/Polygons/: ConvexPolygon.cpp  ConvexPolygon.h  Polygon.h  PolygonAlgorithms.cpp  PolygonAlgorithms.h  RegularPolygon.cpp  RegularPolygon.h  StarPolygon.cpp  StarPolygon.h
